# hillel_django_hw5

./: .gitignore  README.md  pyproject.toml
common/: __init__.py  enums.py
hillel_project/: __init__.py  db.sqlite3
hillel_project/accounts/: urls.py  views.py
hillel_project/common/: enums.py
hillel_project/first_app/: admin.py  forms.py  salary_calculator.py  signals.py  translation.py  urls.py
hillel_project/first_app/migrations/: 0003_experiment_article_experiment2.py  0003_experiment_article_experiment2_position_monthly_rate.py  0004_monthlysalary.py  0004_position_monthly_rate.py  0005_position_description_alter_position_monthly_rate_and_more.py  0006_alter_department_name.py  0007_alter_position_description.py  0008_position_description_en_position_description_uk_and_more.py  0009_alter_position_description_and_more.py  0010_department_name_en_department_name_uk.py
hillel_project/first_app/models/: __init__.py  department.py  employee.py  position.py
hillel_project/first_app/views/: func_views.py  generic_views.py
hillel_project/general/: admin.py  middlewares.py  models.py
hillel_project/general/migrations/: 0001_initial.py  0002_rename_request_requeststatistics_requests.py  0003_rename_exception_requeststatistics_exceptions.py
hillel_project/hillel_project/: settings.py  urls.py
hillel_project/static/css/: style.scss
hillel_project/templates/: base.html  employee_confirm_delete.html  employee_form.html  employee_list.html  home.html  salary_calculator.html
hillel_project/templates/first_app/: employee_details.html  employee_list.html
(+7 files in other folders)
